[package]
name = "dyn-bindgen"
version = "0.1.0"
authors = ["vlakreeh <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
bindgen = "0.57.0"
ctor = "0.1.19"
hex = "0.4.3"
md5 = "0.7.0"
proc-macro2 = "1.0.24"
quote = "1.0.7"

[dependencies.syn]
version = "1.0.53"
features = ["full", "visit-mut"]
