[package]
name = "math"
version = "0.1.0"
authors = ["Zeb Piasecki <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"

[build-dependencies]
libloading = "0.7.0"
bindgen = "0.57.0"
cc = "1.0.67"
dyn-bindgen = { path = "../../" }
